k8s/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: classifier-api
  namespace: dog-classifier
  labels:
    app: classifier-api

spec:
  selector:
    app: classifier-api

  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000

  type: ClusterIP
